--- a/Task2/build.gradle
+++ b/Task2/build.gradle
@@ -128,5 +128,6 @@ dependencies {
     compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
     compile group: 'javax.activation', name: 'activation', version: '1.1.1'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.12'
 
 }
