--- a/Task3/build.gradle
+++ b/Task3/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'io.spring.dependency-management'
 group 'ru.nsu.fit.ermakova'
 version '1.0-SNAPSHOT'
 
-mainClassName = "com.bettercoding.spring.Hello"
+mainClassName = "com.spring.Hello"
 sourceCompatibility = 10
 repositories {
     mavenCentral()
@@ -27,8 +27,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    compile 'log4j:log4j:1.2.17'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
     //compile "org.slf4j:slf4j-log4j12:1.8.0-alpha2"
     //compile group: 'org.springframework:spring-webmvc'
+    //строчка ниже добавлена
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE'
     compile 'org.apache.commons:commons-compress:1.20'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
