--- a/Task3/src/main/resources/application.properties
+++ b/Task3/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/usersmanagement
+#spring.datasource.url=jdbc:postgresql://localhost:5432/nodedatabase
 spring.datasource.username=postgres
 spring.datasource.password=1
 server.port=8080
