--- a/Task3/src/main/resources/application.properties
+++ b/Task3/src/main/resources/application.properties
@@ -1,17 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/node_database
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/usersmanagement
-#spring.datasource.url=jdbc:postgresql://localhost:5432/nodedatabase
 spring.datasource.username=postgres
 spring.datasource.password=1
-server.port=8080
+server.port=8181
 logging.level.org.springframework=ERROR
 spring.jpa.hibernate.ddl-auto=none
 spring.jackson.default-property-inclusion=NON_NULL
 spring.datasource.initialization-mode=always
-#spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/node_database
-#spring.datasource.username=postgres
-#spring.datasource.password=1
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
